[package]
name = "rembi-mifa"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
url = { version = "2", features = ["serde"] }
monostate = "1.0.2"
iref = { version = "3.2.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
